# netbox-client

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  LICENSE.md  README.md  mkdocs.yml  pyproject.toml  setup.py  test.py
.github/workflows/: Relase.yml  docs.yml  pipeline.yml  relase.yml
compile/: api_structure.py  compile.py  convert.py
compile/specs/: Circuits.json  Customization.json  Operations.json  Provisioning.json  connections.json  devices.json  ipam.json  organization.json  power.json  virtualization.json  vpn.json  wireless.json
docs/: Getting started.md  contributing.md  index.md
docs/api/: index.md
docs/client/: Core.md
netboxCli/: __init__.py  client.py  compile.py  core.py
netboxCli/circuits/: __init__.py  circuit_types.py  circuits.py  provider_accounts.py  provider_networks.py  providers.py
netboxCli/connections/: __init__.py  cables.py  console_connections.py  interface_connections.py  power_connections.py  wireless_links.py
netboxCli/customization/: __init__.py  custom_field_choices.py  custom_fields.py  custom_links.py  export_templates.py  image_attachments.py  reports.py  saved_filters.py  scripts.py  tags.py
netboxCli/devices/: __init__.py  console_ports.py  console_server_ports.py  device_types.py  devices.py  devices_roles.py  front_ports.py  interfaces.py  inventory_items.py  inventory_items_roles.py  manufacturers.py  modules.py  modules_bays.py  modules_types.py  platforms.py  power_outlets.py  power_ports.py  rear_ports.py  virtual_chassis.py  virtual_chassis_contexts.py
netboxCli/extras/: __init__.py  config_contexts.py  config_templates.py  custom_fields.py  custom_links.py  export_templates.py  saved_filters.py  starter.py  tags.py
netboxCli/ipam/: __init__.py  aggregates.py  asn_ranges.py  asns.py  fhrp_groups.py  ip_addresses.py  ip_ranges.py  prefix_roles.py  prefixes.py  rirs.py  router_targets.py  services.py  services_templates.py  vlan_groups.py  vlans.py  vrfs.py
netboxCli/operations/: __init__.py  change_log.py  data_sources.py  jobs.py  journal_entries.py  webhooks.py
netboxCli/organization/: __init__.py  contact_assignment.py  contact_assignments.py  contact_associations.py  contact_groups.py  contact_roles.py  contacts.py  locations.py  racks.py  racks_roles.py  regions.py  reservations.py  site_groups.py  sites.py  tenant_groups.py  tenants.py
netboxCli/overlay/: __init__.py  l2vpns.py  terminations.py
netboxCli/power/: __init__.py  power_feeds.py  power_panels.py
netboxCli/provisioning/: __init__.py  config_contexts.py  config_templates.py
netboxCli/virtualization/: __init__.py  cluster_groups.py  cluster_types.py  clusters.py  interfaces.py  virtual_machines.py  vms.py
netboxCli/vpn/: __init__.py  ike_policies.py  ike_proposals.py  ipsec_policies.py  ipsec_profiles.py  ipsec_proposals.py  l2vpns.py  terminations.py  tunnel_groups.py  tunnel_grups.py  tunnel_terminations.py  tunnels.py
netboxCli/wireless/: __init__.py  wireless_lan_groups.py  wireless_lans.py
netboxcli/: __init__.py  client.py  core.py
netboxcli/circuits/: __init__.py  circuit_types.py  circuits.py  provider_accounts.py  provider_networks.py  providers.py
netboxcli/connections/: __init__.py  cables.py  wireless_links.py
netboxcli/customization/: __init__.py  custom_fields.py  custom_links.py  export_templates.py  image_attachments.py  reports.py  saved_filters.py  scripts.py  tags.py
netboxcli/devices/: __init__.py  console_ports.py  console_server_ports.py  device_types.py  devices.py  devices_roles.py  front_ports.py  interfaces.py  inventory_items.py  inventory_items_roles.py  manufacturers.py  modules.py  modules_bays.py  modules_types.py  platforms.py  power_outlets.py  power_ports.py  rear_ports.py  virtual_chassis.py  virtual_chassis_contexts.py
netboxcli/ipam/: __init__.py  aggregates.py  asn_ranges.py  asns.py  fhrp_groups.py  ip_addresses.py  ip_ranges.py  prefix_roles.py  prefixes.py  rirs.py  router_targets.py  services.py  services_templates.py  vlan_groups.py  vlans.py  vrfs.py
netboxcli/operations/: __init__.py  data_sources.py  jobs.py  journal_entries.py  webhooks.py
netboxcli/organization/: __init__.py  contact_assignments.py  contact_groups.py  contact_roles.py  contacts.py  locations.py  racks.py  racks_roles.py  regions.py  reservations.py  site_groups.py  sites.py  tenant_groups.py  tenants.py
netboxcli/power/: __init__.py  power_feeds.py  power_panels.py
netboxcli/provisioning/: __init__.py  config_contexts.py  config_templates.py
netboxcli/virtualization/: __init__.py  cluster_groups.py  cluster_types.py  clusters.py  interfaces.py  virtual_machines.py
netboxcli/vpn/: __init__.py  ike_policies.py  ike_proposals.py  ipsec_policies.py  ipsec_profiles.py  ipsec_proposals.py  l2vpns.py  terminations.py  tunnel_groups.py  tunnel_terminations.py  tunnels.py
netboxcli/wireless/: __init__.py  wireless_lan_groups.py  wireless_lans.py
tests/: test.py
(+106 files in other folders)
