[tool.poetry]
name = "netboxcli"
version = "1.1.2"
description = ""
authors = ["kaio Guilherme  <kaioguilherme444@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"
setuptools = "^69.5.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.18"
mkdocstrings = "^0.24.3"
mkdocstrings-python = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
lint-fix = "blue . && isort ."
docs = "mkdocs serve -a 0.0.0.0:8080"
pre_test = "task lint"
test = "pytest -s -x --cov=netboxcli -vv"
post_test = "coverage html"
test_get = "pytest -s -x --cov=test -vv tests/test.py"