[tool.poetry]
name = "netboxcli"
version = "1.2.0" 
description = "A Python package to interact with the NetBox API."
authors = ["kaio Guilherme  <kaioguilherme444@gmail.com>"]
readme = "README.md"
packages = [{ include = "netboxcli", from = "." }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries",
]
license = "MIT"
[tool.poetry.urls]
"Codigo" = "https://github.com/Kaioguilherme1/netbox-client"
"Homepage" = "https://netboxcli.readthedocs.io/pt/latest/"
"Documentation" = "https://netboxcli.readthedocs.io/pt/latest/client/"
"Bug Tracker" = "https://github.com/Kaioguilherme1/netbox-client/issues"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"
setuptools = "^69.5.1"
cz-conventional-gitmoji = "^0.3.0"
commitizen = "^3.24.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.18"
mkdocstrings = "^0.24.3"
mkdocstrings-python = "^1.10.0"
mkdocs-macros-plugin = "^1.0.5"
jinja2 = "^3.1.3"
termynal = "^0.12.1"


[tool.commitizen]
name = "cz_gitmoji"
tag_format = "V$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
lint-fix = "blue . && isort ."
docs = "mkdocs serve -a 0.0.0.0:8080"
commit = "cz commit"
pre_test = "task lint"
test = "pytest -s -x --cov=netboxcli -vv"
post_test = "coverage html"
test_get = "python3 tests/test.py get"
